--- a/res/pendidikan.html
+++ b/res/pendidikan.html
@@ -4,7 +4,7 @@
     <title>Pendidikan</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-    <link rel="shortcut icon" href="http://cartodb.com/assets/favicon.ico" />
+    <link rel="shortcut icon" href="//cartodb.com/assets/favicon.ico" />
     <style>
       html, body, #map {
         width:100%;
@@ -14,19 +14,19 @@
       }
     </style>
 
-    <link rel="stylesheet" href="http://libs.cartocdn.com/cartodb.js/v3/3.15/themes/css/cartodb.css" />
+    <link rel="stylesheet" href="//libs.cartocdn.com/cartodb.js/v3/3.15/themes/css/cartodb.css" />
   </head>
     
   <body>
     <div id="map"></div>
 
     <!-- include cartodb.js library -->
-    <script src="http://libs.cartocdn.com/cartodb.js/v3/3.15/cartodb.js"></script>
+    <script src="//libs.cartocdn.com/cartodb.js/v3/3.15/cartodb.js"></script>
 
     <script>
 
       function main() {
-        cartodb.createVis('map', 'https://pemkotbekasi.carto.com/api/v2/viz/4da1bb04-0fb8-11e7-b36f-0e233c30368f/viz.json', {
+        cartodb.createVis('map', '//pemkotbekasi.carto.com/api/v2/viz/4da1bb04-0fb8-11e7-b36f-0e233c30368f/viz.json', {
           shareable: false,
           title: false,
           description: false,
